added database and extended aternos features

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,6 @@ __pycache__/pictures.cpython-310.pyc
 __pycache__/weather.cpython-310.pyc
 __pycache__/web.cpython-310.pyc
 __pycache__/news.cpython-310.pyc
-
+bot-venv
+*.db
 
