added at_login and at_servers commands, also fixes

--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,8 @@ __pycache__/web.cpython-310.pyc
 __pycache__/news.cpython-310.pyc
 __pycache__
 bot-venv
-sessions
-.env
+sessions/
 *.db
 temp.*
-
+.at*
+.env
