--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-discord==1.7.3
+discord.py==2.1.0
 pyowm==3.2.0
 requests==2.26.0
 beautifulsoup4==4.10.0
 python-dotenv==0.20.0
 python-aternos==2.1.3
 sqlalchemy==2.0.0
+flake8==6.0.0
