--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -2,7 +2,8 @@ name: Code check
 on: 
   push
   pull_request:
-    branches: [master]
+    branches:
+      - master
 
 jobs:
   build:
@@ -19,5 +20,4 @@ jobs:
           pip install -r requirements.txt
       - name: Run flake8
         run: flake8 .
-      -name: 
         
