--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,10 +1,13 @@
 name: Code check
 on: 
-  push
+  push:
+    branches:
+      - master
+      - aternos_manager
   pull_request:
     branches:
       - master
-
+      
 jobs:
   build:
     runs-on: ubuntu-latest
