--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -7,12 +7,12 @@ on:
   pull_request:
     branches:
       - master
-      
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
       - name: Install Python
         uses: actions/setup-python@v2
         with:
