--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,12 +1,14 @@
-name: Code lint
+name: Code test
 on: 
   push:
+    branches:
+      - master
   pull_request:
     branches:
       - master
 
 jobs:
-  build:
+  pytest:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -19,8 +21,8 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install deps
         run: |
-          python -m pip install --upgrade pip wheel
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
-      - name: Run flake8
-        run: flake8 .
+      - name: Test code
+        run: python -m unittest -v
         
