--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,4 +23,4 @@ jobs:
           docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Docker Push
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/discord-swamp-bot
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/discord-swamp-bot:$(date +%s)
