--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,11 +16,11 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Build the Docker image
-        run: docker build . --file Dockerfile
+        run: docker build . --file Dockerfile --tag v0es/discord-swamp-bot:latest
 
       - name: Docker Login
         run: |
           docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Docker Push
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/discord-swamp-bot
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/discord-swamp-bot:latest
