changed arch to arm64v8 in Dockerfile

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: Docker Image CI
+name: Docker Image CI/CD
 
 on:
   push:
@@ -24,3 +24,10 @@ jobs:
 
       - name: Docker Push
         run: docker push ${{ secrets.DOCKER_USERNAME }}/discord-swamp-bot:latest
+    
+  deploy-container:
+    name: Deploy container to server
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: 
