--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -76,7 +76,7 @@ jobs:
       - name: Check out repo
         uses: actions/checkout@v3
       
-      - name: Install Python ${{ matrix.python-version }}
+      - name: Install Python
         uses: actions/setup-python@v2
 
       - name: Install deps
