--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -81,5 +81,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install requests
+        pip install python-dotenv
     - name: Run deploy script
       run: DEPLOY=true python deploy.py
