--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -82,5 +82,6 @@ jobs:
         python -m pip install --upgrade pip
         pip install requests
         pip install python-dotenv
+        pip install pyowm
     - name: Run deploy script
-      run: DEPLOY=true python deploy.py
+      run: python deploy.py
