--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -55,6 +55,7 @@ jobs:
   deploy-container:
     name: Deploy container to server
     runs-on: ubuntu-latest
+    needs: push_to_registry
      
     env: 
       YANDEX_API_KEY: ${{ secrets.YANDEX_API_KEY }}
